feat: add Instagram input field with validation messages

--- a/cadastro.html
+++ b/cadastro.html
@@ -63,6 +63,11 @@
                         <label class="input-label" for="numero">Número</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
+                     <div class="input-container">
+                        <input name="instagram" id="instagram" class="input" type="text" placeholder="Instagram" pattern="^@[a-zA-Z0-9._]{1,30}$" data-tipo="instagram" required>
+                        <label class="input-label" for="instagram">Instagram</label>
+                        <span class="input-mensagem-erro">Este campo não está válido</span>
+                    </div>
                 </fieldset>
                 <fieldset>
                     <legend class="formulario__legenda">Endereço</legend>
