feat: add price input masking functionality with SimpleMaskMoney

--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doguito Petshop | Cadastro de produto</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/base/base.css">
     <link rel="stylesheet" href="./assets/css/componentes/cabecalho.css">
     <link rel="stylesheet" href="./assets/css/componentes/cartao.css">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./assets/css/cadastro_produto.css">
 </head>
+
 <body>
     <header class="cabecalho container">
         <img src="./assets/img/doguitoadm.svg" alt="Logo Doguito" class="cabecalho__logo">
@@ -49,5 +51,20 @@
             </form>
         </section>
     </main>
+    <script src="./js/simple-mask-money.umd.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+
+            SimpleMaskMoney.setMask("#preco", {
+                prefix: "R$ ",
+                fixed: true,
+                fractionDigits: 2,
+                decimalSeparator: ",",
+                thousandsSeparator: "."
+            });
+
+        });
+    </script>
 </body>
+
 </html>
